--- a/src/app/gestion-cinema/ajouter-cinema/ajouter-cinema.component.html
+++ b/src/app/gestion-cinema/ajouter-cinema/ajouter-cinema.component.html
@@ -7,7 +7,7 @@
     <app-header (toggleSidebarForMe)="sideBarToggler()"></app-header>
     <div class="container-fluid page">
       <div class="d-flex page__box p-3 mt-2" style="color: azure">
-        Ajouter Cinema
+        Ajouter Cinemae
       </div>
 
 
