--- a/src/app/gestion-film/gestion-film.component.scss
+++ b/src/app/gestion-film/gestion-film.component.scss
@@ -4,7 +4,7 @@
   background: #f1f5f9;
   &__box {
     min-height: 120px;
-    background: #122d67;
+    background: #1e293b;
     margin: 0 -1rem;
     font-size: 36px;
   }
@@ -36,7 +36,7 @@ mat-drawer-container {
 }
 
 mat-drawer {
-  background: hwb(221 2% 70%);
+  background: #0f172a;
 }
 .cssbuttons-io-button {
   display: flex;
