--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,13 +13,13 @@
           >
             <img src="./assets/user.jpg" alt="" class="user-image mr-1 p-2" />
 
-            User Name
+            {{nom}}
             <mat-icon class="user-image-icon ml-1"
               >keyboard_arrow_down</mat-icon
             >
           </button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item>
+            <button (click)="logout()" mat-menu-item>
               <mat-icon>exit_to_app</mat-icon>
               Logout
             </button>
