--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <mat-nav-list>
   <div class="logo py-4">
-    <img src="./assets/aez.svg" width="50" height="80"  alt="E-Cinema" /> 
-    <!--<h1 style="color: rgb(249, 249, 249)">Cinema</h1> -->
+    <!----<img src="./assets/aez.svg" width="50" height="80"  alt="E-Cinema" />  -->
+    <h1 style="color: rgb(249, 249, 249)">E-Cinema</h1> 
   </div>
   <mat-divider></mat-divider>
   <h2 matSubheader class="mt-2">APPLICATIONS</h2>
@@ -14,12 +14,12 @@
     routerLinkActive="list-item-active"
     routerLink="/gestion-cinema"
   >
-    <mat-icon>dashboard</mat-icon> Gestion Cinema
+  <mat-icon> store_mall_directory</mat-icon> Gestion Cinema
   </a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="/gestion-salle">
-    <mat-icon>dashboard</mat-icon> Gestion Des Salles
+    <mat-icon>style</mat-icon> Gestion Des Salles
   </a>
-  <a mat-list-item routerLink="/gestion-film"> <mat-icon>edit</mat-icon> Gestion Des Films </a>
-  <a mat-list-item> <mat-icon>edit</mat-icon> Link 5 </a>
-  <a mat-list-item> <mat-icon>edit</mat-icon> Link 6 </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/gestion-film"> <mat-icon>tv</mat-icon> Gestion Des Films </a>
+  <!-- <a mat-list-item> <mat-icon>edit</mat-icon> Link 5 </a> -->
+  
 </mat-nav-list>
