--- a/src/app/user/films-details/films-details.component.html
+++ b/src/app/user/films-details/films-details.component.html
@@ -1,50 +1,109 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid justify-content-between">
+    <!-- Brand -->
+    <a class="navbar-brand me-2 mb-1 d-flex align-items-center" >
+      <img src="./assets/logo1.svg" height="40" width="60" alt="" loading="lazy" style="margin-top: 2px;">
+    </a>
+    
+    <!-- Search form -->
+    <form class="input-group w-auto my-auto d-none d-sm-flex">
+      <input autocomplete="off" type="search" class="form-control rounded" placeholder="Search" style="min-width: 125px;">
+      <span class="input-group-text border-0 d-none d-lg-flex"><i class="fas fa-search"></i></span>
+    </form>
+
+    <!-- Left elements -->
+    <ul class="navbar-nav flex-row d-none d-md-flex">
+
+      <li class="nav-item me-3 me-lg-1" routerLinkActive="active">
+          <a class="nav-link" routerLink="/user/home-user">Home</a>
+        </li>
+      <li class="nav-item me-3 me-lg-1" routerLinkActive="active">
+        <a class="nav-link" routerLink="/user/films">Films</a>
+      </li>
+      <li class="nav-item me-3 me-lg-1" routerLinkActive="active">
+        <a class="nav-link" routerLink="/user/myticket">My Tickets</a>
+      </li>
+      <li class="nav-item me-3 me-lg-1" routerLinkActive="active">
+        <a class="nav-link" routerLink="/user/profile">Profile</a>
+      </li>
+      <li class="nav-item me-3 me-lg-1">
+        <a class="nav-link" (click)="logout()">Logout</a>
+      </li>
+    </ul>
+    
+   <!-- Right elements -->
+   <ul class="navbar-nav flex-row">
+    <li class="nav-item me-3 me-lg-1">
+      <a class="nav-link d-sm-flex align-items-sm-center" >
+        <img src="https://mdbootstrap.com/img/new/avatars/1.webp" class="rounded-circle" height="22" alt="" loading="lazy">
+        <strong class="d-none d-sm-block ms-1">{{nom}}</strong>
+      </a>
+    </li>
+  </ul>
+</div>
+</nav>
 
 
+<br><br><br>
+
+
+
+<div id="container">	
+	
+  <!-- Start	Product details -->
+    <div class="product-details">
       
-
-<table class="table align-middle mb-0 bg-white">
-    <thead class="bg-light">
-      <tr>
-        <th>Title</th>
-        <th>genre</th>
-        <th>senariste</th>
-
-        <th>heure de projection</th>
-        <th>Duree</th>
-        <th>salle</th>
-        <th>tickets disponibles</th>
-
-
-      </tr>
-    </thead>
-    <tbody>
-      <tr  *ngFor="let item of films">
-        <td>
-         
-    {{item.titre}}
-         
-        </td>
-        <td>{{item.genre}}</td>
-        <td>{{item.acteur}}</td>
-        <td>{{item.heureProjection}}</td>
-        <td>{{item.duree}}</td>
-        <td>{{item.salle}} </td>
-        <td>
-              {{item.nbr_ticket}}
-            
-          </td>
-          <td>
-            <button type="button" class="btn btn-outline-primary mr-2;">
-                Reserver
-              </button>
-              <button type="button" class="btn btn-outline-danger" routerLink="/user/films">
-                Back               
-               </button>
-          </td>
-          
-      </tr>
-     
+      <!-- 	Product Name -->
+    <h1>{{ films?.titre }}</h1>
+  <!-- 		<span class="hint new">New</span> -->
+  <!-- 		<span class="hint free-shipping">Free Shipping</span> -->
+  <!-- 		the Product rating -->
+    <span class="hint-star star">
+      <i class="fa fa-star" aria-hidden="true"></i>
+      <i class="fa fa-star" aria-hidden="true"></i>
+      <i class="fa fa-star" aria-hidden="true"></i>
+      <i class="fa fa-star-half-o" aria-hidden="true"></i>
+      <i class="fa fa-star-o" aria-hidden="true"></i>
+    </span>
       
-    </tbody>
-  </table> 
+   
+  <!-- The most important information about the product -->
+      <p class="information"> Get your ticket now before it ends </p>
+  
+      <form (ngSubmit)="onSubmit()">
+      <br><br>
+      <button type="submit" style="background-color: #ff0000; color: #fff; border: none; padding: 7px 20px; border-radius: 5px; cursor: pointer;">
+        Réserver            </button></form>
+        
+  </div>
+    
+
+    
+  <div class="product-image">
+    
+    <img src="./assets/details.jpg" alt="Omar Dsoky">
+    
+  <!-- 	product Information-->
+  <div class="info">
+    <h2>The Description</h2>
+    <ul>
+      <li><strong>Titre: </strong>{{ films?.titre }}</li>
+      <li><strong>Genre: </strong>{{ films?.genre}}</li>
+      <li><strong>duree: </strong>{{ films?.duree }}</li>
+      <li><strong>Date Projection </strong>{{ films?.heureProjection }}</li>
+      <li><strong>Salle: </strong>{{ films?.salle.nom }}</li>
+      <li><strong>Nbr de Tickets: </strong>{{ films?.nbr_ticket }}</li>
+      <li><strong>prix: </strong>{{ films?.prix }}</li>
+    </ul>
+  </div>
+  </div>
+  <!--  End product image  -->
+  
+  
+  </div>
+  
+  
+  
+
+
 
