--- a/src/app/user/films/films.component.html
+++ b/src/app/user/films/films.component.html
@@ -1,128 +1,79 @@
 <mat-drawer-container class="my-drawer-container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid justify-content-between">
-          <!-- Left elements -->
-          <div class="d-flex">
-            <!-- Brand -->
-            <a class="navbar-brand me-2 mb-1 d-flex align-items-center" href="#">
-              <img
-                src="https://mdbootstrap.com/img/logo/mdb-transaprent-noshadows.webp"
-                height="20"
-                alt=""
-                loading="lazy"
-                style="margin-top: 2px;"
-              />
-            </a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid justify-content-between">
+      <!-- Brand -->
+      <a class="navbar-brand me-2 mb-1 d-flex align-items-center" >
+        <img src="./assets/logo1.svg" height="40" width="60" alt="" loading="lazy" style="margin-top: 2px;">
+      </a>
       
-            <!-- Search form -->
-            <form class="input-group w-auto my-auto d-none d-sm-flex">
-              <input
-                autocomplete="off"
-                type="search"
-                class="form-control rounded"
-                placeholder="Search"
-                style="min-width: 125px;"
-              />
-              <span class="input-group-text border-0 d-none d-lg-flex"
-                ><i class="fas fa-search"></i
-              ></span>
-            </form>
+      <!-- Search form -->
+      <form class="input-group w-auto my-auto d-none d-sm-flex">
+        <input autocomplete="off" type="search" class="form-control rounded" placeholder="Search" style="min-width: 125px;">
+        <span class="input-group-text border-0 d-none d-lg-flex"><i class="fas fa-search"></i></span>
+      </form>
+  
+      <!-- Left elements -->
+      <ul class="navbar-nav flex-row d-none d-md-flex">
+  
+        <li class="nav-item me-3 me-lg-1" routerLinkActive="active">
+            <a class="nav-link" routerLink="/user/home-user">Home</a>
+          </li>
+        <li class="nav-item me-3 me-lg-1" routerLinkActive="active">
+          <a class="nav-link" routerLink="/user/films">Films</a>
+        </li>
+        <li class="nav-item me-3 me-lg-1" routerLinkActive="active">
+          <a class="nav-link" routerLink="/user/myticket">My Tickets</a>
+        </li>
+        <li class="nav-item me-3 me-lg-1" routerLinkActive="active">
+          <a class="nav-link" routerLink="/user/profile">Profile</a>
+        </li>
+        <li class="nav-item me-3 me-lg-1">
+          <a class="nav-link" (click)="logout()">Logout</a>
+        </li>
+      </ul>
+      
+       <!-- Right elements -->
+       <ul class="navbar-nav flex-row">
+        <li class="nav-item me-3 me-lg-1">
+          <a class="nav-link d-sm-flex align-items-sm-center" >
+            <img src="https://mdbootstrap.com/img/new/avatars/1.webp" class="rounded-circle" height="22" alt="" loading="lazy">
+            <strong class="d-none d-sm-block ms-1">{{nom}}</strong>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  
+
+
+
+    <div class="row">
+
+      <div class="example-1 card" *ngFor="let item of films">
+        <div class="wrapper">
+          <div class="date">{{item.heureProjection}}
+            <span class="day"></span>
+            <span class="month"></span>
+            <span class="year"></span>
           </div>
-          <!-- Left elements -->
-      
-          <!-- Center elements -->
-          <ul class="navbar-nav flex-row d-none d-md-flex">
-            <li class="nav-item me-3 me-lg-1 active">
-              <a class="nav-link" href="/user/films">
-               Film
-              </a>
-            </li>
-      
-            <li class="nav-item me-3 me-lg-1">
-              <a class="nav-link" href="user/cinema">
-                Cinema
-              </a>
-            </li>
-      
-            <li class="nav-item me-3 me-lg-1">
-              <a class="nav-link"  href="user/salle">
-                salle  </a>
-            </li>
-      
-            <li class="nav-item me-3 me-lg-1">
-              <a class="nav-link" href="#">
-                logout
-              </a>
-            </li>
-      
-
-          </ul>
-    
-          <ul class="navbar-nav flex-row">
-            <li class="nav-item me-3 me-lg-1">
-              <a class="nav-link d-sm-flex align-items-sm-center" href="#">
-                <img
-                  src="https://mdbootstrap.com/img/new/avatars/1.webp"
-                  class="rounded-circle"
-                  height="22"
-                    
-                  alt=""
-                  loading="lazy"
-                />
-                <strong class="d-none d-sm-block ms-1">User</strong>
-              </a>
-            </li>
-           
-           
-           
-           
-           
-          </ul>
-          <!-- Right elements -->
-        </div>
-      </nav>
-    
-      <div class="container-fluid page">
-        <div class="d-flex page__box p-3 mt-2" style="color: black">
-          List of Films
-        </div>
-        <table class="table mt-4">
-          <thead>
-            <tr>
-              <th scope="col">Nom film</th>
-              <th scope="col">Genre</th>
-              <th scope="col">nbr_ticket</th>
-              <th scope="col">Heure</th>
-              <th scope="col">Actions</th>
-
-
-    
-              <th scope="col"></th>
-            </tr>
-          </thead>
-          <tbody>
-            
-           <tr *ngFor="let item of films">
-            <td>{{item.titre}}</td>
-                <td>{{item.genre}}</td>
-                
-                <td>{{item.nbr_ticket}}</td> 
-                <td>{{item.duree}}</td> 
-
-
-                 <td>{{item.heureProjection}}</td>  
-               
-      
-              <td>
-                <button type="button" class="btn btn-outline-primary mr-2;" (click)="decrementTicketCount()" >
-                  Reserver
-                </button>
-                <button type="button" class="btn btn-outline-danger" routerLink="/user/film_details">
-                 Details               
-                </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+          <div class="data">
+            <div class="content">
+              <span class="author">{{item.genre}}</span>
+              <h1 class="title"><a href="#">{{item.titre}}</a></h1>
+              <p class="text">{{item.description}}</p>
+              <label for="show-menu" class="menu-button"><span></span></label>
+            </div>
+            <ul class="menu-content">
+              <li>
+                <a href="#" class="fa fa-bookmark-o"></a>
+              </li>
+              <li><a href="#" class="fa fa-heart-o"><span></span></a></li>
+              <li><a href="#" class="fa fa-comment-o"><span>8</span></a></li>
+            </ul>
+          </div>
+        </div><button  style="background-color: #ff0000; color: #fff; border: none; padding: 7px 20px; border-radius: 5px; cursor: pointer;" routerLink="/user/film_details/{{item.id}}">
+          Details              </button>
       </div>
-    </mat-drawer-container>
+      </div>
+    
+  </mat-drawer-container>
